--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "version": "2.0.2",
-    "name": "com.red_folder.phonegap.plugin.backgroundservice",
+    "version": "3.0.0",
+    "name": "com.amchealth.phonegap.plugin.backgroundservice",
     "cordova_name": "AMC Background Service Plugin - Core logic",
     "description": "Starts stops and on/off boots",
     "license": "Apache 2.0",
