--- a/plugin.xml
+++ b/plugin.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android"
-        id="com.red_folder.phonegap.plugin.backgroundservice"
-        version="2.0.2">
+        id="com.amchealth.phonegap.plugin.backgroundservice"
+        version="3.0.0">
 
     <name>Background Service Plugin - Core logic</name>
 
@@ -25,7 +25,7 @@
 
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="BackgroundServicePlugin">
-                <param name="android-package" value="com.red_folder.phonegap.plugin.backgroundservice.BackgroundServicePlugin"/>
+                <param name="android-package" value="com.amchealth.phonegap.plugin.backgroundservice.BackgroundServicePlugin"/>
             </feature>
     
         </config-file>
@@ -36,7 +36,7 @@
         
         <config-file target="AndroidManifest.xml" parent="/manifest/application">
   
-            <receiver android:name="com.red_folder.phonegap.plugin.backgroundservice.BootReceiver">
+            <receiver android:name="com.amchealth.phonegap.plugin.backgroundservice.BootReceiver">
                 <intent-filter>     
                     <action android:name="android.intent.action.BOOT_COMPLETED"></action>   
                 </intent-filter> 
@@ -45,11 +45,11 @@
         </config-file>
         
 		
-        <source-file src="src/android/com/red_folder/phonegap/plugin/backgroundservice/BackgroundServicePlugin.java" target-dir="src/com/red_folder/phonegap/plugin/backgroundservice" />
-        <source-file src="src/android/com/red_folder/phonegap/plugin/backgroundservice/BackgroundServiceHelper.java" target-dir="src/com/red_folder/phonegap/plugin/backgroundservice" />
-        <source-file src="src/android/com/red_folder/phonegap/plugin/backgroundservice/BootReceiver.java" target-dir="src/com/red_folder/phonegap/plugin/backgroundservice" />
-        <source-file src="src/android/com/red_folder/phonegap/plugin/backgroundservice/PropertyHelper.java" target-dir="src/com/red_folder/phonegap/plugin/backgroundservice" />
-        <source-file src="src/android/com/red_folder/phonegap/plugin/backgroundservice/ReflectionHelper.java" target-dir="src/com/red_folder/phonegap/plugin/backgroundservice" />
+        <source-file src="src/android/com/amchealth/phonegap/plugin/backgroundservice/BackgroundServicePlugin.java" target-dir="src/com/amchealth/phonegap/plugin/backgroundservice" />
+        <source-file src="src/android/com/amchealth/phonegap/plugin/backgroundservice/BackgroundServiceHelper.java" target-dir="src/com/amchealth/phonegap/plugin/backgroundservice" />
+        <source-file src="src/android/com/amchealth/phonegap/plugin/backgroundservice/BootReceiver.java" target-dir="src/com/amchealth/phonegap/plugin/backgroundservice" />
+        <source-file src="src/android/com/amchealth/phonegap/plugin/backgroundservice/PropertyHelper.java" target-dir="src/com/amchealth/phonegap/plugin/backgroundservice" />
+        <source-file src="src/android/com/amchealth/phonegap/plugin/backgroundservice/ReflectionHelper.java" target-dir="src/com/amchealth/phonegap/plugin/backgroundservice" />
 		
     </platform>
 </plugin>
